# third_party_tex-hyphen

./: BUILD.gn  LICENSE  OAT.xml  README.OpenSource  README.zh.md  README_en.md  README_zh.md  bundle.json  tex-hyphen.gni
hyph-utf8/tex/generic/hyph-utf8/patterns/tex/: hyph-en-gb.tex  hyph-hsb.tex  hyph-id.tex  hyph-ru.tex
ohos/hpb-binary/: hyph-as.hpb  hyph-be.hpb  hyph-bg.hpb  hyph-cs.hpb  hyph-cy.hpb  hyph-da.hpb  hyph-de-1901.hpb  hyph-de-1996.hpb  hyph-de-ch-1901.hpb  hyph-el-monoton.hpb  hyph-el-polyton.hpb  hyph-en-gb.hpb  hyph-en-us.hpb  hyph-es.hpb  hyph-et.hpb  hyph-fr.hpb  hyph-ga.hpb  hyph-gl.hpb  hyph-gu.hpb  hyph-hr.hpb  hyph-hu.hpb  hyph-hy.hpb  hyph-id.hpb  hyph-is.hpb  hyph-it.hpb  hyph-ka.hpb  hyph-kn.hpb  hyph-la.hpb  hyph-lt.hpb  hyph-lv.hpb  hyph-mk.hpb  hyph-ml.hpb  hyph-mn-cyrl.hpb  hyph-mr.hpb  hyph-mul-ethi.hpb  hyph-nl.hpb  hyph-or.hpb  hyph-pa.hpb  hyph-pl.hpb  hyph-pt.hpb  (+15 more)
ohos/src/hyphen-build/: hyphen_pattern.h  hyphen_pattern_processor.cpp  hyphen_pattern_reader.cpp
ohos/test/: generate_report.py  report_config.json
patches/: patches.json
