# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//third_party/tex-hyphen/tex-hyphen.gni")



ohos_executable("hpb_transform") {
  output_name = "hpb_transform"
  part_name = "tex-hyphen"
  install_enable = false
  sources = [
    "$hyphen_root/ohos/src/hyphen-build/hyphen_pattern_processor.cpp",
  ]
  external_deps = [
    "icu:shared_icuuc",
  ]
}

action("tex_hyphen_hpb") {
  script = "$hyphen_root/ohos/build/generate_hpb.py"
  root_out_dir_with_host_toolchain = get_label_info(":hpb_transform(${host_toolchain})", "root_out_dir")
  sources = [
    "$hyphen_tex_root/hyph-af.tex"
  ]
  outputs = [
    "$target_out_dir/hpb_out" 
  ]
  args = [
    rebase_path(rebase_path(root_out_dir_with_host_toolchain) + "/thirdparty/tex-hyphen/hpb_transform", root_build_dir),
    rebase_path(sources[0], root_build_dir),
    rebase_path(outputs[0], root_build_dir),
  ]
  deps = [ ":hpb_transform(${host_toolchain})" ]
}

# dep_list = []

# foreach(hpb, hpb_list) {
#   language = hpb.language
#   ohos_prebuilt_etc(language) {
#     source = hpb.file_path
#     module_install_dir = "usr/ohos_hyphen_data"
#     subsystem_name = "thirdparty"
#     part_name = "tex-hyphen"
#   }
#   dep_list += [ language ]
# }

# group("tex_hyphen_hpb") {
#   deps = []
#   foreach(dep, dep_list) {
#     deps += [ ":${dep}" ]
#   }
# }