# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

hyphen_root = "//third_party/tex-hyphen"
hyphen_tex_root = "//third_party/tex-hyphen/hyph-utf8/tex/generic/hyph-utf8/patterns/tex"

hpb_list = [
    {
        language = "hyph-be"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-be.hpb"
    },
    {
        language = "hyph-cs"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-cs.hpb"
    },
    {
        language = "hyph-cy"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-cy.hpb"
    },
    {
        language = "hyph-da"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-da.hpb"
    },
    {
        language = "hyph-de-1901"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-de-1901.hpb"
    },
    {
        language = "hyph-de-ch-1901"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-de-ch-1901.hpb"
    },
    {
        language = "hyph-el-monoton"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-el-monoton.hpb"
    },
    {
        language = "hyph-el-polyton"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-el-polyton.hpb"
    },
    {
        language = "hyph-en-gb"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-en-gb.hpb"
    },
    {
        language = "hyph-en-us"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-en-us.hpb"
    },
    {
        language = "hyph-es"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-es.hpb"
    },
    {
        language = "hyph-et"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-et.hpb"
    },
    {
        language = "hyph-fr"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-fr.hpb"
    },
    {
        language = "hyph-ga"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-ga.hpb"
    },
    {
        language = "hyph-gl"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-gl.hpb"
    },
    {
        language = "hyph-hr"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-hr.hpb"
    },
    {
        language = "hyph-hu"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-hu.hpb"
    },
    {
        language = "hyph-hy"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-hy.hpb"
    },
    {
        language = "hyph-id"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-id.hpb"
    },
    {
        language = "hyph-is"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-is.hpb"
    },
    {
        language = "hyph-it"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-it.hpb"
    },
    {
        language = "hyph-ka"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-ka.hpb"
    },
    {
        language = "hyph-lt"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-lt.hpb"
    },
    {
        language = "hyph-lv"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-lv.hpb"
    },
    {
        language = "hyph-mk"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-mk.hpb"
    },
    {
        language = "hyph-mn-cyrl"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-mn-cyrl.hpb"
    },
    {
        language = "hyph-nl"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-nl.hpb"
    },
    {
        language = "hyph-pt"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-pt.hpb"
    },
    {
        language = "hyph-ru"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-ru.hpb"
    },
    {
        language = "hyph-sh-cyrl"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-sh-cyrl.hpb"
    },
    {
        language = "hyph-sh-latn"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-sh-latn.hpb"
    },
    {
        language = "hyph-sk"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-sk.hpb"
    },
    {
        language = "hyph-sl"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-sl.hpb"
    },
    {
        language = "hyph-sr-cyrl"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-sr-cyrl.hpb"
    },
    {
        language = "hyph-sv"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-sv.hpb"
    },
    {
        language = "hyph-th"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-th.hpb"
    },
    {
        language = "hyph-tk"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-tk.hpb"
    },
    {
        language = "hyph-tr"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-tr.hpb"
    },
    {
        language = "hyph-uk"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-uk.hpb"
    },
    {
        language = "hyph-zh-latn-pinyin"
        file_path = "${hyphen_root}/ohos/hpb-binary/hyph-zh-latn-pinyin.hpb"
    }
]
